fix: horizontal scroll

--- a/src/assets/styles/scss/_contact.scss
+++ b/src/assets/styles/scss/_contact.scss
@@ -29,11 +29,24 @@
   }
 
   &__title {
-    width: 508px;
+    @include media-laptop {
+      width: 508px;
+      font-size: 4.8rem;
+      line-height: 48px;
+    }
+    @include media-tablet {
+      width: 508px;
+      font-size: 4.8rem;
+      line-height: 48px;
+    }
+    @include media-mobile {
+      width: 327px;
+      font-size: 3.6rem;
+      line-height: 36px;
+    }
     font-family: Gilroy-Bold;
-    font-size: 4.8rem;
     font-weight: 700;
-    line-height: 48px;
+    letter-spacing: 0px;
     text-align: left;
   }
 
