--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -643,7 +643,7 @@ body {
     padding: 18px 0;
   }
   .apps__item__screen-right {
-    width: 175px;
+    width: 107px;
   }
   .apps__item__screen-icon {
     width: 44px;
@@ -1393,24 +1393,26 @@ body {
   align-items: flex-start;
   flex-wrap: wrap;
   margin-top: -36px;
-  column-gap: 24px;
 }
 @media (min-width: 1060px) {
   .team__slider-item {
     width: 1040px;
     height: 508px;
+    column-gap: 24px;
   }
 }
 @media (max-width: 1059px) {
   .team__slider-item {
     width: 696px;
     height: 508px;
+    column-gap: 24px;
   }
 }
 @media (max-width: 743px) {
   .team__slider-item {
-    width: 328px;
+    width: 327px;
     height: 508px;
+    column-gap: 23px;
   }
 }
 .team__member {
@@ -1658,12 +1660,31 @@ body {
   }
 }
 .contact__title {
-  width: 508px;
   font-family: Gilroy-Bold;
-  font-size: 4.8rem;
   font-weight: 700;
-  line-height: 48px;
+  letter-spacing: 0px;
   text-align: left;
+}
+@media (min-width: 1060px) {
+  .contact__title {
+    width: 508px;
+    font-size: 4.8rem;
+    line-height: 48px;
+  }
+}
+@media (max-width: 1059px) {
+  .contact__title {
+    width: 508px;
+    font-size: 4.8rem;
+    line-height: 48px;
+  }
+}
+@media (max-width: 743px) {
+  .contact__title {
+    width: 327px;
+    font-size: 3.6rem;
+    line-height: 36px;
+  }
 }
 .contact__details {
   display: flex;
@@ -1914,25 +1935,25 @@ body {
   color: #FFFFFF;
 }
 
-.wrapper__contact {
+.wrapper__contact-page {
   display: flex;
   justify-content: flex-start;
   gap: 24px;
 }
 @media (min-width: 1060px) {
-  .wrapper__contact {
+  .wrapper__contact-page {
     flex-direction: row;
     height: 586px;
   }
 }
 @media (max-width: 1059px) {
-  .wrapper__contact {
+  .wrapper__contact-page {
     flex-direction: column;
     height: 826px;
   }
 }
 @media (max-width: 743px) {
-  .wrapper__contact {
+  .wrapper__contact-page {
     flex-direction: column;
     height: 818px;
   }
